# affordance-net

./: CMakeLists.txt  package.xml  setup.py
lib/: setup.py
lib/utils/: handy.py
pddl/: auto_problem.pddl  domain.pddl~  problem.pddl~
scripts/: demo_kinect.py  kinect_pddl.py
tools/: camera_to_marker.py  demo_kinect.py
