<?xml version="1.0"?>
<package format="2">
  <name>affordance-net</name>
  <description>The affordance_net package</description>

  <maintainer email="lseguin3@gatech.edu">Landan Seguin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>

